deployments/test-redirect/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-redirect
  annotations:
    elifesciences.org/default-project: ${cluster_name}
