deployments/test-redirect/deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: slow-backend
  namespace: test-redirect
  labels:
    app: slow-backend
spec:
  containers:
  - name: slow
    image: hashicorp/http-echo
    args:
    - "-text=hello"
    - "-listen=:8080"
    - "-delay=2s" # Artificial delay
