deployments/test-redirect/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  namespace: test-redirect
spec:
  selector:
    app: http-svc
  type: ClusterIP
  ports:
  - port: 8080
