deployments/test-redirect/ingress-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: 'return 302 https://bbc.co.uk/;'
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-elife-oauth@kubernetescrd
  name: test-redirect
  namespace: test-redirect
spec:
  ingressClassName: traefik
  rules:
  - host: test-redirect.${cluster_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-svc
            port:
              number: 80
  tls:
  - hosts:
    - test-redirect.${cluster_domain}
    secretName: test-redirect.${cluster_domain}-tls
